# k12-lms-platform

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit
apps/ai-gateway/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/ai-gateway/app/: auth.py  config.py  main.py  rate_limit.py
apps/ai-gateway/app/models/: generate.py
apps/ai-gateway/app/prompts/: system_prompts.py
apps/ai-gateway/app/providers/: anthropic_provider.py  base.py  openai_provider.py  registry.py
apps/ai-gateway/app/routers/: v1.py
apps/ai-gateway/app/safety/: __init__.py  content_classifier.py  filters.py  pii_filter.py  pipeline.py
apps/ai-gateway/tests/: conftest.py  test_anthropic_provider.py  test_content_classifier.py  test_generate.py  test_generate_stream.py  test_health.py  test_openai_provider.py  test_pii_filter.py  test_provider_endpoint.py  test_providers.py  test_registry.py  test_safety_pipeline.py  test_v1_router.py
docs/: BLOCKERS.md  BUNDLE_SIZE_BASELINES.md  DATABASE_BACKUP.md  EXECUTION_PLAN_NEXT_2_SPRINTS.md  PRIORITIZED_BACKLOG.md  SCHEMA_MIGRATION_DRIFT_AUDIT_2026-02-14.md  TRACEABILITY.md
iOS/: CODEX_IOS_FAMILY_APP_MASTER_PLAN.md  CODEX_IOS_FAMILY_WEBAPP_PARITY_MASTER_PLAN.md  CODEX_IOS_FAMILY_WEBAPP_PHASE_01_GUARDIAN_API.md  CODEX_IOS_FAMILY_WEBAPP_PHASE_02_GUARDIAN_WEB_PARITY.md  CODEX_IOS_FAMILY_WEBAPP_PHASE_03_MESSAGING_GUARDRAILS.md  CODEX_IOS_FAMILY_WEBAPP_PHASE_04_CONTRACTS_AND_TESTS.md  CODEX_IOS_PORTFOLIO_PLACEHOLDER_PLAN.md  CODEX_IOS_STUDENT_APP_MASTER_PLAN.md  README.md  (+5 more)
(+2751 files in other folders)
